# test-coreml-onnxruntime

./: CMakeLists.txt  README.md  exec.sh  large_model.onnx  main.cpp
onnxruntime_coreml/include/: onnxruntime_c_api.h  onnxruntime_cxx_api.h  onnxruntime_cxx_inline.h  onnxruntime_session_options_config_keys.h
onnxruntime_coreml/lib/cmake/onnxruntime/: onnxruntimeTargets-relwithdebinfo.cmake
onnxruntime_coreml/lib/pkgconfig/: libonnxruntime.pc
onnxruntime_cpu/include/: onnxruntime_c_api.h
onnxruntime_cpu/lib/cmake/onnxruntime/: onnxruntimeTargets.cmake
onnxruntime_cpu/lib/pkgconfig/: libonnxruntime.pc
python/: main.py
